Fix font glitches on tablet media query

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -142,7 +142,7 @@
 		}
 
 		.container {
-			width: 960px;
+			width: 100%;
 		}
 
 	}
@@ -2255,7 +2255,7 @@
 		/* Basic */
 
 			body {
-				min-width: 960px;
+				/*min-width: 960px;*/
 				font-size: 10.25pt;
 				line-height: 1.75em;
 			}
@@ -2356,7 +2356,7 @@
 
 			body, input, textarea, select {
 				line-height: 1.75em;
-				font-size: 10pt;
+				font-size: 8pt;
 				letter-spacing: 0;
 			}
 
